k8s-manifests/06-mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  serviceName: "mariadb"
  selector:
    matchLabels:
      app: guacamole
      tier: backend
  template:
    metadata:
      labels:
        app: guacamole
        tier: backend
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.4.30
          imagePullPolicy: IfNotPresent
          ports:
            - name: mariadb
              containerPort: 3306
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 25
            periodSeconds: 25
          resources:
            requests:
              memory: "90Mi"
              cpu: "250m"
            limits:
              memory: "150Mi"
              cpu: "500m"
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: "/var/lib/mysql"
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-storage
