k8s-manifests/10-guacamole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
      tier: frontend
  template:
    metadata:
      labels:
        app: guacamole
        tier: frontend
    spec:
      containers:
        - name: guacamole
          image: noloknolo/guacamole:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacamole
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "750m"
