k8s-manifests/05-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: guacamole
    tier: backend
