k8s-manifests/07-guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  ports:
    - name: guacd
      port: 4822
      targetPort: 4822
      protocol: TCP
  selector:
    run: guacd
