k8s-manifests/09-guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
    tier: frontend
spec:
  ports:
    - name: guacamole
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: guacamole
    tier: frontend
