k8s-manifests/11-guacamole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: <your-cluster-issuer>
    k8s.io/ingress-nginx: public
    k8s/ingress.class: public
  name: guacamole-ingress
  namespace: guacamole
  labels:
    app: guacamole
spec:
  tls:
    - hosts:
        - <your-domain>
      secretName: guacamole-tls
  rules:
  - host: <your-domain>
    http:
      paths:
      - pathType: Prefix
        path: /guacamole/
        backend:
          service:
            name: guacamole
            port:
              number:  8080
